ci(coveralls): don't fail when coveralls has a multiday outage

--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -73,6 +73,7 @@ jobs:
         with:
             parallel: true
             flag-name: behave
+            fail-on-error: false
 
       - name: Upload Coverage to GitHub
         if: matrix.python-version == '3.12'
