--- a/compose/production/translator/Dockerfile
+++ b/compose/production/translator/Dockerfile
@@ -2,6 +2,8 @@ FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
 ENV PYTHONUNBUFFERED=1
 ENV UV_NO_DEV=1
+ENV UV_COMPILE_BYTECODE=1
+ENV UV_LINK_MODE=copy
 
 RUN apt-get update \
   # dependencies for building Python packages
@@ -12,15 +14,18 @@ RUN apt-get update \
 
 WORKDIR /app
 
-COPY ./translator/pyproject.toml ./translator/uv.lock* ./
-
-# Install deps only (as protobuf stuff doesn't exist yet but we need deps to setup protobufs)
-RUN uv sync --locked --no-install-project
+# At first we install  the deps only (as protobuf stuff doesn't exist yet but we need deps to setup protobufs). We also
+# mount instead of copying to have a small build cache gain. Not that useful but is modern practice so why not.
+RUN --mount=type=cache,target=/root/.cache/uv \
+  --mount=type=bind,source=uv.lock,target=uv.lock \
+  --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+  --mount=type=bind,source=translator/pyproject.toml,target=translator/pyproject.toml \
+  uv sync --frozen --no-install-project --package translator
 
 # put the venv into PATH
 ENV PATH="/app/.venv/bin:$PATH"
 
-COPY ./translator/src /app/
+COPY ./translator/src ./translator/src/
 
 # Generate protobuf files
 # TODO: Make this less jank and don't do the git clone crap?
@@ -35,7 +40,11 @@ RUN git clone -b v3.33.0 https://github.com/osrg/gobgp.git gobgp \
     *.proto \
     && cd /app && rm -rf gobgp
 
-# Install the project itself (including the protobuff stuff)
-RUN uv sync --locked
+# Install the project itself (including the protobuff stuff) again mounting in the project files.
+RUN --mount=type=cache,target=/root/.cache/uv \
+  --mount=type=bind,source=uv.lock,target=uv.lock \
+  --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+  --mount=type=bind,source=translator/pyproject.toml,target=translator/pyproject.toml \
+  uv sync --frozen --package translator
 
 ENTRYPOINT ["python", "-m", "translator.translator"]
