refactor(translator): move into src layout and use uv properly (#213)
Now translator is actually a proper python package. We could publish it
in pypy if we were so inclined, but for now, at least it's using uv
workspaces and actually is setup to not be so intermingled with
scram-django. I also updated scheduler to now use the root lockfile so
that we can use one lockfile to rule them all. We also have a pre-commit
step to check for an out of date lockfile to make sure we don't change
pyproject but forget to update the lock. Having the lock file committed
allows us to have our builds actually be reproducible, which is nice.

Also updates django-simple-history as `pkg_resources` seems to have been
broken and 3.4+ removes that dependency (and is still compatible with
django 4.2)

--- a/compose/production/translator/Dockerfile
+++ b/compose/production/translator/Dockerfile
@@ -1,6 +1,7 @@
 FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim
 
 ENV PYTHONUNBUFFERED=1
+ENV UV_NO_DEV=1
 ENV UV_COMPILE_BYTECODE=1
 ENV UV_LINK_MODE=copy
 
@@ -31,13 +32,13 @@ COPY ./translator/src ./translator/src/
 # Protos don't work well in packages so we generate them in /app/ outside the package so that bare
 # `import gobgp_pb2` style imports work.
 RUN git clone -b v3.33.0 https://github.com/osrg/gobgp.git gobgp \
-  && cd gobgp/api \
-  && python3 -m grpc_tools.protoc -I./ \
-  --python_out=/app/ \
-  --pyi_out=/app/ \
-  --grpc_python_out=/app/ \
-  *.proto \
-  && cd /app && rm -rf gobgp
+    && cd gobgp/api \
+    && python3 -m grpc_tools.protoc -I./ \
+    --python_out=/app/ \
+    --pyi_out=/app/ \
+    --grpc_python_out=/app/ \
+    *.proto \
+    && cd /app && rm -rf gobgp
 
 # Install the project itself (including the protobuff stuff) again mounting in the project files.
 RUN --mount=type=cache,target=/root/.cache/uv \
